[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mercury"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.12"
description = "The starlette application."
authors = [
    { name = "zlhywlf", email = "tommietanghao@zlhywlf.onmicrosoft.com" },
]
classifiers = [
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gunicorn~=22.0.0;sys_platform!='win32'",
    "orjson~=3.10.1",
    "starlette~=0.37.2",
    "uvicorn~=0.29.0",
    "httpx~=0.27.0",
    "motor~=3.4.0",
    "pydantic~=2.7.1",
    "jsonschema~=4.22.0",
    "jmespath~=1.0.1",
]

[project.urls]
"Homepage" = "https://github.com/zlhywlf"

[project.scripts]
mercury = "mercury.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "PIE", "Q", "W"]
ignore = ["N99"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.pytest_env]
DEBUG = true

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src/mercury"]

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true
