[build-system]
requires = ["hatchling", "hatch-vcs"] # https://hatch.pypa.io/
build-backend = "hatchling.build"

[project]
name = "mercury"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.12"
description = "The asynchronous web application."
authors = [
  { name = "zlhywlf", email = "tommietanghao@zlhywlf.onmicrosoft.com" },
]
classifiers = [
  "Framework :: AsyncIO",
  "Framework :: Pydantic",
  "Environment :: Web Environment",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "starlette~=0.37.0", # https://www.starlette.io/
  "uvicorn~=0.30.0", # http://www.uvicorn.org/
  "click~=8.1.0", # https://click.palletsprojects.com/
]

[project.urls]
"Homepage" = "https://github.com/zlhywlf"

[project.scripts]
mercury = "mercury.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mercury"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mercury/_version.py"
template = """
\"""version.

Copyright (c) 2023-present 善假于PC也 (zlhywlf).
\"""

version = {version!r}
version_tuple = {version_tuple!r}
"""

[tool.ruff]
line-length = 120
fix = true
preview = true
exclude = ["src/mercury/_version.py"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = [
  "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C4", "COM", "CPY", "D", "DTZ", "E", "EM", "ERA", "F", "FBT", "I", "ICN",
  "ISC", "N", "PIE", "PT", "PTH", "PYI", "Q", "RET", "RSE", "RUF", "S", "SIM", "SLOT", "T20", "TD", "UP", "W",
]
ignore = ["COM812", "D203", "D213", "ISC001"]

[tool.ruff.lint.extend-per-file-ignores]
"test_*.py" = ["S101"]
"__init__.py" = ["D104", "CPY001"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.pytest_env]
DEBUG = true

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src/mercury", "tests"]

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true
